--- a/TrainingTask/TrainingTask/Base.lproj/Main.storyboard
+++ b/TrainingTask/TrainingTask/Base.lproj/Main.storyboard
@@ -1,24 +1,124 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zTJ-3f-iOr">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item-->
+        <scene sceneID="fhH-HP-rd3">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController navigationBarHidden="YES" id="zTJ-3f-iOr" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ihy-QV-hbv"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="V7n-Vl-Pgx">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3Vz-S1-2UD" kind="relationship" relationship="rootViewController" id="hh3-am-gOR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VoM-dU-FoD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-315" y="-219"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="VLv-MY-34X">
+            <objects>
+                <tabBarController id="3Vz-S1-2UD" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="whQ-vX-16M">
+                        <nil key="title"/>
+                    </navigationItem>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="avE-63-gNk">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="KcT-6c-hM6" kind="relationship" relationship="viewControllers" id="sF9-RB-NWK"/>
+                        <segue destination="wwx-fE-SL0" kind="relationship" relationship="viewControllers" id="eh4-8D-tYH"/>
+                        <segue destination="G8L-Ja-jd9" kind="relationship" relationship="viewControllers" id="qZm-YR-qP8"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="92U-Pu-LfR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1075.5725190839694" y="-219.01408450704227"/>
+        </scene>
+        <!--Videos-->
+        <scene sceneID="4rW-jR-KLA">
+            <objects>
+                <viewController id="G8L-Ja-jd9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cLs-aG-pj7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="aMI-ep-W3W"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Videos" image="video.fill" catalog="system" id="OHf-TF-eNT"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3PL-qM-jqq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2190" y="601"/>
+        </scene>
+        <!--For You-->
+        <scene sceneID="9zu-p2-yED">
+            <objects>
+                <viewController id="KcT-6c-hM6" customClass="ViewController" customModule="TrainingTask" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0sx-cY-zHY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="lu2-y7-0OY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="For You" image="book.fill" catalog="system" id="g2P-4r-dhf"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F5p-YA-q2i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="229.7709923664122" y="600.70422535211276"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="wnf-Wl-af9">
+            <objects>
+                <viewController id="8U4-Qx-wmc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rty-99-tlr">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="eDn-NG-nRj"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="WjV-A5-kVH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v2y-Qu-nhI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="230" y="1421"/>
+        </scene>
+        <!--Questions-->
+        <scene sceneID="Bj9-W3-ax0">
+            <objects>
+                <viewController id="wwx-fE-SL0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="C2x-QW-PVV">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="BlM-bK-Oax"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Questions" image="message.fill" catalog="system" id="Vs0-wD-tBS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="66C-ye-7NG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1196" y="601"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="book.fill" catalog="system" width="128" height="95"/>
+        <image name="message.fill" catalog="system" width="128" height="114"/>
+        <image name="video.fill" catalog="system" width="128" height="81"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
