--- a/TrainingTask/TrainingTask/customViews/customNavBar/CustomNavigationBar.xib
+++ b/TrainingTask/TrainingTask/customViews/customNavBar/CustomNavigationBar.xib
@@ -11,13 +11,12 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomNavigationBar" customModule="TrainingTask" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomNavigationBar" customModule="TrainingTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="990" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="990" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wCh-YM-zTY">
-                    <rect key="frame" x="8" y="55" width="60" height="60"/>
+                    <rect key="frame" x="7.9999999999999964" y="36.333333333333343" width="55.666666666666657" height="55.666666666666657"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="GuX-oz-qrQ"/>
                         <constraint firstAttribute="width" secondItem="wCh-YM-zTY" secondAttribute="height" multiplier="1:1" id="pKo-Bd-8q0"/>
                     </constraints>
                     <state key="normal" title="Button"/>
@@ -26,7 +25,7 @@
                     </buttonConfiguration>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="am6-xt-oUm">
-                    <rect key="frame" x="828.66666666666663" y="65" width="85.333333333333371" height="40.333333333333343"/>
+                    <rect key="frame" x="834.33333333333337" y="45.666666666666657" width="85.333333333333371" height="46.333333333333343"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Arabic">
                         <fontDescription key="titleFontDescription" type="system" pointSize="22"/>
@@ -34,9 +33,8 @@
                     </buttonConfiguration>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8uV-84-d7T">
-                    <rect key="frame" x="922" y="55" width="60" height="60"/>
+                    <rect key="frame" x="927.66666666666663" y="37.666666666666657" width="54.333333333333371" height="54.333333333333343"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="60" id="MMz-mO-ezh"/>
                         <constraint firstAttribute="width" secondItem="8uV-84-d7T" secondAttribute="height" multiplier="1:1" id="hDH-GA-Rol"/>
                     </constraints>
                     <state key="normal" title="Button"/>
@@ -50,10 +48,11 @@
             <constraints>
                 <constraint firstItem="wCh-YM-zTY" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="B7e-HW-HHP"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8uV-84-d7T" secondAttribute="trailing" constant="8" id="BsO-XR-4l7"/>
-                <constraint firstItem="8uV-84-d7T" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="HRE-yl-AHS"/>
-                <constraint firstItem="wCh-YM-zTY" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="LzI-wQ-7lf"/>
-                <constraint firstItem="am6-xt-oUm" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="dRN-Ta-mtv"/>
+                <constraint firstItem="8uV-84-d7T" firstAttribute="bottom" secondItem="am6-xt-oUm" secondAttribute="bottom" id="L7y-gV-NZv"/>
+                <constraint firstAttribute="bottom" secondItem="8uV-84-d7T" secondAttribute="bottom" constant="8" id="MvZ-3R-aMt"/>
                 <constraint firstItem="8uV-84-d7T" firstAttribute="leading" secondItem="am6-xt-oUm" secondAttribute="trailing" constant="8" id="nGa-r3-akR"/>
+                <constraint firstItem="am6-xt-oUm" firstAttribute="top" secondItem="8uV-84-d7T" secondAttribute="top" constant="8" id="o4x-Pu-qUr"/>
+                <constraint firstAttribute="bottom" secondItem="wCh-YM-zTY" secondAttribute="bottom" constant="8" id="tOI-hL-ZZI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
