--- a/TrainingTask/TrainingTask/Base.lproj/Main.storyboard
+++ b/TrainingTask/TrainingTask/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -67,14 +68,48 @@
         <!--For You-->
         <scene sceneID="9zu-p2-yED">
             <objects>
-                <viewController id="KcT-6c-hM6" customClass="ViewController" customModule="TrainingTask" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="KcT-6c-hM6" customClass="ForYouViewController" customModule="TrainingTask" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0sx-cY-zHY">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RQb-oe-OIz">
+                                <rect key="frame" x="8" y="100" width="377" height="90"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="LD9-e7-G0x"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="e5S-GU-1Ak">
+                                    <size key="itemSize" width="91" height="80"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1dk-XL-bbx">
+                                        <rect key="frame" x="0.0" y="5" width="91" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="YUB-Zh-IwD">
+                                            <rect key="frame" x="0.0" y="0.0" width="91" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="91" height="80"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="lu2-y7-0OY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lu2-y7-0OY" firstAttribute="trailing" secondItem="RQb-oe-OIz" secondAttribute="trailing" constant="8" id="1an-xL-f1S"/>
+                            <constraint firstItem="RQb-oe-OIz" firstAttribute="top" secondItem="0sx-cY-zHY" secondAttribute="top" constant="100" id="g2h-eB-ffg"/>
+                            <constraint firstItem="RQb-oe-OIz" firstAttribute="leading" secondItem="lu2-y7-0OY" secondAttribute="leading" constant="8" id="tmb-ws-EX6"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="For You" image="book.fill" catalog="system" id="g2P-4r-dhf"/>
+                    <connections>
+                        <outlet property="filtersCollectionView" destination="RQb-oe-OIz" id="ost-zn-MLy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5p-YA-q2i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
