--- a/TrainingTask/TrainingTask/customViews/customNavBar/CustomNavigationBar.xib
+++ b/TrainingTask/TrainingTask/customViews/customNavBar/CustomNavigationBar.xib
@@ -8,13 +8,20 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomNavigationBar" customModule="TrainingTask" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomNavigationBar" customModule="TrainingTask" customModuleProvider="target">
+            <connections>
+                <outlet property="backButton" destination="Iwn-SJ-595" id="HfO-EG-UdW"/>
+                <outlet property="languageButton" destination="am6-xt-oUm" id="kbH-vv-2NM"/>
+                <outlet property="menuButton" destination="wCh-YM-zTY" id="0h6-mU-mzm"/>
+                <outlet property="searchButton" destination="8uV-84-d7T" id="nXG-0J-Lrm"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomNavigationBar" customModule="TrainingTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="990" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wCh-YM-zTY">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wCh-YM-zTY" userLabel="Menu Button">
                     <rect key="frame" x="7.9999999999999964" y="36.333333333333343" width="55.666666666666657" height="55.666666666666657"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="wCh-YM-zTY" secondAttribute="height" multiplier="1:1" id="pKo-Bd-8q0"/>
@@ -32,7 +39,7 @@
                         <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </buttonConfiguration>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8uV-84-d7T">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8uV-84-d7T" userLabel="Search Button">
                     <rect key="frame" x="927.66666666666663" y="37.666666666666657" width="54.333333333333371" height="54.333333333333343"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="8uV-84-d7T" secondAttribute="height" multiplier="1:1" id="hDH-GA-Rol"/>
@@ -42,6 +49,16 @@
                         <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </buttonConfiguration>
                 </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iwn-SJ-595" userLabel="Back Button">
+                    <rect key="frame" x="7.9999999999999964" y="36.333333333333343" width="55.666666666666657" height="55.666666666666657"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title=" ">
+                        <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="onBackButtonClcik:" destination="-1" eventType="touchUpInside" id="R7q-8I-3ii"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,20 +67,20 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8uV-84-d7T" secondAttribute="trailing" constant="8" id="BsO-XR-4l7"/>
                 <constraint firstItem="8uV-84-d7T" firstAttribute="bottom" secondItem="am6-xt-oUm" secondAttribute="bottom" id="L7y-gV-NZv"/>
                 <constraint firstAttribute="bottom" secondItem="8uV-84-d7T" secondAttribute="bottom" constant="8" id="MvZ-3R-aMt"/>
+                <constraint firstItem="Iwn-SJ-595" firstAttribute="centerY" secondItem="wCh-YM-zTY" secondAttribute="centerY" id="SwO-y2-bXr"/>
+                <constraint firstItem="Iwn-SJ-595" firstAttribute="leading" secondItem="wCh-YM-zTY" secondAttribute="leading" id="mfO-3o-WkH"/>
                 <constraint firstItem="8uV-84-d7T" firstAttribute="leading" secondItem="am6-xt-oUm" secondAttribute="trailing" constant="8" id="nGa-r3-akR"/>
                 <constraint firstItem="am6-xt-oUm" firstAttribute="top" secondItem="8uV-84-d7T" secondAttribute="top" constant="8" id="o4x-Pu-qUr"/>
+                <constraint firstItem="Iwn-SJ-595" firstAttribute="top" secondItem="wCh-YM-zTY" secondAttribute="top" id="orW-JZ-Qrd"/>
                 <constraint firstAttribute="bottom" secondItem="wCh-YM-zTY" secondAttribute="bottom" constant="8" id="tOI-hL-ZZI"/>
+                <constraint firstItem="Iwn-SJ-595" firstAttribute="centerX" secondItem="wCh-YM-zTY" secondAttribute="centerX" id="zrG-p4-Wu9"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="languageButton" destination="am6-xt-oUm" id="BEd-lR-Ipz"/>
-                <outlet property="menuBar" destination="wCh-YM-zTY" id="qQI-AV-YCW"/>
-                <outlet property="searchButton" destination="8uV-84-d7T" id="eEB-Ja-BDG"/>
-            </connections>
             <point key="canvasLocation" x="-169.46564885496181" y="-251.40845070422537"/>
         </view>
     </objects>
     <resources>
+        <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <image name="line.3.horizontal" catalog="system" width="128" height="65"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
     </resources>
