--- a/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
+++ b/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
@@ -30,19 +30,44 @@
                     <rect key="frame" x="0.0" y="100" width="393" height="718"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qEa-jA-8ap">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="363.66666666666669"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="369.66666666666669"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="236-nB-Fsz" userLabel="Title Stack View">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="63.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="75.666666666666671"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEALTH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLR-1v-Pry">
-                                            <rect key="frame" x="16" y="8" width="361" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YU6-XU-lnE">
+                                            <rect key="frame" x="16" y="8" width="361" height="30"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Pk-f8-Vy3">
+                                                    <rect key="frame" x="0.0" y="0.0" width="56.666666666666664" height="30"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category tag" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLR-1v-Pry">
+                                                            <rect key="frame" x="4" y="0.0" width="48.666666666666664" height="30"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <color key="textColor" red="0.2145442367" green="0.69583368300000004" blue="0.64083248380000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.8410204053" green="0.95244675869999995" blue="0.94903796910000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="zLR-1v-Pry" firstAttribute="top" secondItem="4Pk-f8-Vy3" secondAttribute="top" id="Eyj-QY-GTz"/>
+                                                        <constraint firstAttribute="bottom" secondItem="zLR-1v-Pry" secondAttribute="bottom" id="cbI-vk-663"/>
+                                                        <constraint firstItem="zLR-1v-Pry" firstAttribute="leading" secondItem="4Pk-f8-Vy3" secondAttribute="leading" constant="4" id="hbI-HC-K7i"/>
+                                                        <constraint firstAttribute="trailing" secondItem="zLR-1v-Pry" secondAttribute="trailing" constant="4" id="pgm-4I-thn"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4DD-1j-c1i">
+                                                    <rect key="frame" x="56.666666666666657" y="0.0" width="304.33333333333337" height="30"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="kuT-BM-LwW"/>
+                                            </constraints>
+                                        </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4y-2S-K76">
-                                            <rect key="frame" x="16" y="34" width="361" height="21.666666666666671"/>
+                                            <rect key="frame" x="16" y="46" width="361" height="21.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -51,13 +76,13 @@
                                     <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="VL9-NO-k5V" userLabel="Author Stack View">
-                                    <rect key="frame" x="0.0" y="71.666666666666657" width="393" height="56"/>
+                                    <rect key="frame" x="0.0" y="83.666666666666657" width="393" height="50"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TL0-Hn-tJ6">
-                                            <rect key="frame" x="16" y="8" width="40" height="40"/>
+                                            <rect key="frame" x="16" y="8" width="34" height="34"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="TL0-Hn-tJ6" secondAttribute="height" multiplier="1:1" id="LI5-Is-hPc"/>
-                                                <constraint firstAttribute="height" constant="40" id="Qat-7I-Iye"/>
+                                                <constraint firstAttribute="height" constant="34" id="Qat-7I-Iye"/>
                                             </constraints>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -67,13 +92,13 @@
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Author name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvq-em-coy">
-                                            <rect key="frame" x="70" y="8" width="240" height="40"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
+                                            <rect key="frame" x="64" y="8" width="246" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DKq-yL-RnS">
-                                            <rect key="frame" x="324" y="8" width="53" height="40"/>
+                                            <rect key="frame" x="324" y="8" width="53" height="34"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="square.and.arrow.up" catalog="system" title=" ">
                                                 <color key="baseForegroundColor" red="0.18630859259999999" green="0.77387923000000003" blue="0.7069450021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -83,7 +108,7 @@
                                     <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udp-WU-5zn">
-                                    <rect key="frame" x="0.0" y="135.66666666666666" width="393" height="227.99999999999997"/>
+                                    <rect key="frame" x="0.0" y="141.66666666666666" width="393" height="227.99999999999997"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hGS-wM-PqX">
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="230"/>
