--- a/TrainingTask/TrainingTask/QuestionsScreen/view/QuestionsVC/QuestionsViewController.xib
+++ b/TrainingTask/TrainingTask/QuestionsScreen/view/QuestionsVC/QuestionsViewController.xib
@@ -22,7 +22,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TQf-bS-mUg">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TQf-bS-mUg" customClass="FiltersCollectionView" customModule="TrainingTask" customModuleProvider="target">
                     <rect key="frame" x="8" y="100" width="377" height="88"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
