PostDetails Title Multiline
 - Modify postTitle to be multilined

--- a/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
+++ b/TrainingTask/TrainingTask/PostDetailsScreen/view/PostDetailsVC/PostDetailsViewController.xib
@@ -67,7 +67,7 @@
                                                 <constraint firstAttribute="height" constant="30" id="kuT-BM-LwW"/>
                                             </constraints>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4y-2S-K76">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Post Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B4y-2S-K76">
                                             <rect key="frame" x="16" y="46" width="361" height="21.666666666666671"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                             <nil key="textColor"/>
