--- a/TrainingTask/TrainingTask/QuestionsScreen/view/UserCell/UsersCollectionViewCell.xib
+++ b/TrainingTask/TrainingTask/QuestionsScreen/view/UserCell/UsersCollectionViewCell.xib
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="164" height="308"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y3q-dY-rmX">
-                                <rect key="frame" x="52" y="12" width="60" height="60"/>
+                                <rect key="frame" x="52" y="16" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Y3q-dY-rmX" secondAttribute="height" multiplier="1:1" id="0BN-t9-wfS"/>
                                     <constraint firstAttribute="width" constant="60" id="EHQ-hh-Zdu"/>
@@ -33,29 +33,41 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRk-hv-EBs">
-                                <rect key="frame" x="16" y="76" width="132" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRk-hv-EBs">
+                                <rect key="frame" x="16" y="84" width="132" height="17"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Name">
+                                        <attributes>
+                                            <font key="NSFont" size="14" name="Gotham-Medium"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPp-CO-4Bu">
-                                <rect key="frame" x="8" y="101" width="148" height="199"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPp-CO-4Bu">
+                                <rect key="frame" x="8" y="109" width="148" height="191"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Description">
+                                        <attributes>
+                                            <color key="NSColor" red="0.42352944609999998" green="0.42352938649999999" blue="0.42352944609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="12" name="Gotham-Medium"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="HRk-hv-EBs" firstAttribute="top" secondItem="Y3q-dY-rmX" secondAttribute="bottom" constant="4" id="1sJ-C9-slU"/>
+                            <constraint firstItem="HRk-hv-EBs" firstAttribute="top" secondItem="Y3q-dY-rmX" secondAttribute="bottom" constant="8" id="1sJ-C9-slU"/>
                             <constraint firstAttribute="trailing" secondItem="OPp-CO-4Bu" secondAttribute="trailing" constant="8" id="5xK-eW-R1w"/>
                             <constraint firstAttribute="trailing" secondItem="HRk-hv-EBs" secondAttribute="trailing" constant="16" id="d6M-TD-znM"/>
                             <constraint firstItem="OPp-CO-4Bu" firstAttribute="top" secondItem="HRk-hv-EBs" secondAttribute="bottom" constant="8" id="ffg-vJ-pld"/>
                             <constraint firstAttribute="bottom" secondItem="OPp-CO-4Bu" secondAttribute="bottom" constant="8" id="hIg-CG-4nW"/>
                             <constraint firstItem="OPp-CO-4Bu" firstAttribute="leading" secondItem="Rfx-qf-6ir" secondAttribute="leading" constant="8" id="iec-Uo-0jL"/>
                             <constraint firstItem="Y3q-dY-rmX" firstAttribute="centerX" secondItem="Rfx-qf-6ir" secondAttribute="centerX" id="lxj-bw-Oy1"/>
-                            <constraint firstItem="Y3q-dY-rmX" firstAttribute="top" secondItem="Rfx-qf-6ir" secondAttribute="top" constant="12" id="sQE-zh-Bby"/>
+                            <constraint firstItem="Y3q-dY-rmX" firstAttribute="top" secondItem="Rfx-qf-6ir" secondAttribute="top" constant="16" id="sQE-zh-Bby"/>
                             <constraint firstItem="HRk-hv-EBs" firstAttribute="leading" secondItem="Rfx-qf-6ir" secondAttribute="leading" constant="16" id="uek-5U-HES"/>
                         </constraints>
                     </view>
@@ -74,7 +86,7 @@
                 <outlet property="userImage" destination="Y3q-dY-rmX" id="CAs-iK-SqG"/>
                 <outlet property="userNameLabel" destination="HRk-hv-EBs" id="EkH-ES-ymq"/>
             </connections>
-            <point key="canvasLocation" x="87.022900763358777" y="78.16901408450704"/>
+            <point key="canvasLocation" x="87.022900763358777" y="77.464788732394368"/>
         </collectionViewCell>
     </objects>
 </document>
