--- a/TrainingTask/TrainingTask/ForYouScreen/view/ForYouVC/ForYouViewController.xib
+++ b/TrainingTask/TrainingTask/ForYouScreen/view/ForYouVC/ForYouViewController.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="activityIndicator" destination="qRd-6y-u4p" id="SLA-mn-bdj"/>
                 <outlet property="filtersContainer" destination="aqt-tl-hry" id="8CM-O4-oUO"/>
-                <outlet property="postsContainer" destination="MDg-ba-i74" id="Xtu-VT-7yE"/>
+                <outlet property="postsTableView" destination="J11-0p-6tb" id="Rc8-ga-5MX"/>
                 <outlet property="view" destination="SLp-Te-qIG" id="2C6-9f-o41"/>
             </connections>
         </placeholder>
@@ -32,23 +32,23 @@
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="qRd-6y-u4p">
                     <rect key="frame" x="178" y="407.66666666666669" width="37" height="37"/>
                 </activityIndicatorView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MDg-ba-i74" userLabel="Posts Container">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="J11-0p-6tb">
                     <rect key="frame" x="0.0" y="188" width="393" height="646"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </view>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="0Px-Mh-MdA"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="MDg-ba-i74" secondAttribute="trailing" id="1pk-m4-rer"/>
-                <constraint firstItem="MDg-ba-i74" firstAttribute="top" secondItem="aqt-tl-hry" secondAttribute="bottom" id="DGX-ub-Wjr"/>
+                <constraint firstItem="J11-0p-6tb" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" id="8UV-Xk-WaO"/>
                 <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="aqt-tl-hry" secondAttribute="trailing" constant="8" id="QkY-bj-tLf"/>
                 <constraint firstItem="qRd-6y-u4p" firstAttribute="centerX" secondItem="SLp-Te-qIG" secondAttribute="centerX" id="TBj-3E-m6i"/>
+                <constraint firstAttribute="bottom" secondItem="J11-0p-6tb" secondAttribute="bottom" constant="18" id="WkB-qI-YyU"/>
                 <constraint firstItem="aqt-tl-hry" firstAttribute="top" secondItem="SLp-Te-qIG" secondAttribute="top" constant="100" id="dm3-uP-kmu"/>
                 <constraint firstItem="qRd-6y-u4p" firstAttribute="centerY" secondItem="SLp-Te-qIG" secondAttribute="centerY" id="fCV-wm-ddG"/>
+                <constraint firstItem="J11-0p-6tb" firstAttribute="top" secondItem="aqt-tl-hry" secondAttribute="bottom" id="hfM-PD-NXF"/>
                 <constraint firstItem="aqt-tl-hry" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" constant="8" id="ji4-Rw-CEl"/>
-                <constraint firstItem="MDg-ba-i74" firstAttribute="leading" secondItem="0Px-Mh-MdA" secondAttribute="leading" id="med-9c-mAf"/>
-                <constraint firstAttribute="bottom" secondItem="MDg-ba-i74" secondAttribute="bottom" constant="18" id="qp5-Xs-c9V"/>
+                <constraint firstItem="0Px-Mh-MdA" firstAttribute="trailing" secondItem="J11-0p-6tb" secondAttribute="trailing" id="pAN-oF-ezo"/>
             </constraints>
             <point key="canvasLocation" x="-329" y="-52"/>
         </view>
